--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,8 @@ main {
   display: flex;
   font-size: 10px;
   gap: 4px;
+  padding-bottom: 2px;
+  border-bottom: 1px solid black;
 }
 
 #contact-display > p > span {
