--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,21 @@ main {
   padding: 20px;
 }
 
+button {
+  background-color: blue;
+  border: 2px solid blue;
+  border-radius: 4px;
+  padding: 4px 8px;
+  min-width: 64px;
+  cursor: pointer;
+  color: white;
+}
+
+button:hover {
+  background-color: darkblue;
+  border-color: darkblue;
+}
+
 .card {
   border: 2px solid black;
   border-radius: 4px;
