--- a/src/index.css
+++ b/src/index.css
@@ -77,9 +77,33 @@ h6 {
 }
 
 main {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  column-gap: 36px;
   padding: 20px;
+}
+
+.btn-canvas {
+  width: 100%;
+  height: 120px;
+  background-color: white;
+  color: #0f766e;
+  border-color: #0f766e;
+}
+
+.btn-canvas:hover {
+  background-color: #f9fafb;
+  border: 3px solid #0f766e;
+  font-weight: 700;
+}
+
+.section-container {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 24px;
 }
 
 button {
@@ -88,6 +112,7 @@ button {
   border-radius: 4px;
   padding: 4px 8px;
   min-width: 64px;
+  height: 40px;
   cursor: pointer;
   color: white;
 }
@@ -97,28 +122,9 @@ button:hover {
   border-color: #115e59;
 }
 
-.card {
-  border: 2px solid black;
-  border-radius: 4px;
-  padding: 20px;
-}
-
 #resume-display {
   border: 1px solid black;
   padding: 20px;
-  width: 50%;
-}
-
-#contact-display {
-  display: flex;
-  font-size: 10px;
-  gap: 4px;
-  padding-bottom: 2px;
-  border-bottom: 1px solid black;
-}
-
-#contact-display > p > span {
-  font-weight: 600;
 }
 
 @media (prefers-color-scheme: light) {
