--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,11 @@ main {
   padding: 24px;
 }
 
+.title {
+  display: flex;
+  justify-content: space-between;
+}
+
 button {
   background-color: #0f766e;
   border: 2px solid #0f766e;
@@ -120,6 +125,16 @@ button {
 button:hover {
   background-color: #115e59;
   border-color: #115e59;
+}
+
+.btn-secondary {
+  background-color: white;
+  color: #0f766e;
+}
+
+.btn-secondary:hover {
+  background-color: #f9fafb;
+  border-color: #0f766e;
 }
 
 #resume-display {
