--- a/src/index.css
+++ b/src/index.css
@@ -83,18 +83,10 @@ main {
   padding: 20px;
 }
 
-.btn-canvas {
-  width: 100%;
-  height: 120px;
-  background-color: white;
-  color: #0f766e;
-  border-color: #0f766e;
-}
-
-.btn-canvas:hover {
-  background-color: #f9fafb;
-  border: 3px solid #0f766e;
-  font-weight: 700;
+#resume-builder {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .section-container {
@@ -135,6 +127,20 @@ button:hover {
 .btn-secondary:hover {
   background-color: #f9fafb;
   border-color: #0f766e;
+}
+
+.btn-canvas {
+  width: 100%;
+  height: 120px;
+  background-color: white;
+  color: #0f766e;
+  border-color: #0f766e;
+}
+
+.btn-canvas:hover {
+  background-color: #f9fafb;
+  border: 3px solid #0f766e;
+  font-weight: 700;
 }
 
 #resume-display {
