--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,9 @@ button:hover {
 }
 
 #resume-display {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
   border: 1px solid black;
   padding: 20px;
 }
